# VOXEL_ENGINE

./: .gitignore  .gitmodules  CMakeLists.txt
res/: resources.json
res/shaders/: f_Line.txt  fragment.txt  main.glslf  main.glslv  v_Line.txt  vertex.txt
src/: main.cpp  voxel_engine.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/Events/: Event.hpp  Input.cpp  Input.hpp  Keys.hpp
src/Game/: Game.cpp  Game.hpp  Player.cpp  Player.hpp  World.cpp  World.hpp  WorldGenerator.cpp  WorldGenerator.hpp
src/Graphics/: Mesh.cpp  Mesh.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp
src/Lighting/: LightMap.cpp  LightMap.hpp  LightSolver.cpp  LightSolver.hpp  Lighting.cpp  Lighting.hpp
src/Loaders/: png_loader.cpp  png_loader.hpp
src/Rendering/: LineBatch.cpp  LineBatch.hpp  VoxelRenderer.cpp  VoxelRenderer.hpp
src/Rendering/OpenGL/: Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  Window.cpp  Window.hpp
src/Rendering/Voxels/: Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  Chunks.cpp  Chunks.hpp  Voxel.cpp  Voxel.hpp
src/Resources/: ResourceManager.cpp  ResourceManager.hpp
src/Voxels/: Chunk.cpp  Chunk.hpp  Voxel.hpp
src/Window/: Events.cpp  Events.hpp  Window.cpp  Window.hpp
